@startuml

title __GEOGRAPHICALOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace geoperators.geographicalOperators {
        abstract class gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.GeographicalOperator {
            + getOperatorExpression()
            # GeographicalOperator()
            {abstract} # getOperatorField()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace geoperators.geographicalOperators {
        class gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.OperatorGeoNearestNeighbors {
            - neighborsCount : int
            + getNeighborsCount()
            # getOperatorField()
            {static} ~ newOperatorGeoNearestNeighbors()
            - OperatorGeoNearestNeighbors()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace geoperators.geographicalOperators {
        class gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.OperatorInGeoCircle {
            # getOperatorField()
            {static} ~ newOperatorInGeoCircle()
            - OperatorInGeoCircle()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace geoperators.geographicalOperators {
        class gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.OperatorInGeoRectangle {
            {static} - GEO_KEY_PREFIX : String
            {static} - LOWER_BOUND_NAME : String
            {static} - TEMP_ZSET_NAME : String
            {static} - UPPER_BOUND_NAME : String
            + getOperatorExpression()
            + getZRangeInfo()
            # getOperatorField()
            {static} ~ newOperatorInGeoRectangle()
            - OperatorInGeoRectangle()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace geoperators.geographicalOperators {
        interface gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.RediSearchGeographicalOperator {
            {abstract} + getZRangeInfo()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace geoperators.geographicalOperators {
        class gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.RediSearchGeographicalOperatorFactory {
            {static} + isGeo : Predicate<FilterOperator>
            {static} + isOperatorGeoBox()
            {static} + isOperatorGeoCircle()
            {static} + isOperatorGeoNearestNeighbor()
            {static} + isOperatorGeoRectangle()
            + newOperatorGeoNearestNeighbors()
            + newOperatorInGeoCircle()
            + newOperatorInGeoPolygon()
            + newOperatorInGeoRectangle()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace geoperators.geographicalOperators {
        class gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.ZRangeInfo {
            - keys : Set<String>
            - lowerBoundScore : Double
            - upperBoundScore : Double
            + getKeys()
            + getLowerBoundScore()
            + getUpperBoundScore()
            {static} ~ of()
            - ZRangeInfo()
        }
      }
    }
  }
  

  gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.GeographicalOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.OperatorGeoNearestNeighbors -up-|> gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.OperatorInGeoCircle -up-|> gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.OperatorInGeoRectangle .up.|> gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.RediSearchGeographicalOperator
  gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.OperatorInGeoRectangle -up-|> gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geographicalOperators.RediSearchGeographicalOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.BaseGeographicalOperatorFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
